--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,34 @@
   padding: 0;
 }
 
+body {
+  background-color: black;
+}
+
+@font-face {
+  font-family: odin-font;
+  src: url(../sign-up-form/font/Norse-Bold.otf) format("opentype");
+}
+
 .container {
   position: absolute;
-  left: 0;
+  display: flex;
+  height: 100vh;
+  width: 70%;
+  background-color: white;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.odin-container {
+  position: relative;
   background-image: url(imgs/halie-west-25xggax4bSA-unsplash.jpg);
   background-size: cover;
   display: flex;
+  left: 0;
   height: 100vh;
-  width: 30%;
+  width: 40%;
 }
 
 .odin-holder {
@@ -19,10 +39,19 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: white;
-  top: 100px;
-  background-color: black;
-  opacity: 0.5;
+  top: 150px;
+  background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
-  height: 40px;
+  height: 15vh;
+}
+
+.odin-holder h1 {
+  font-family: odin-font, sans-serif;
+  color: white;
+  font-size: 80px;
+  padding-top: 30px;
+}
+
+.odin-holder img {
+  height: 100px;
 }
